[package]
name = "rcarus"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.5", features = ["rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = {version = "23.0", default-features=false, features=["dx12", "wgsl"]}
pollster = "0.3"
bytemuck = { version = "1.20.0", features = [ "derive" ] }
anyhow = "1.0.93"
tobj = { version = "3.2", default-features = false, features = ["async"]}
glam = {version="0.29.2", features = ["bytemuck"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
